[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[flake8]
max-line-length = 88
max-complexity = 18
ignore = E203, E266, E501, W503, F403, F401

[isort]
profile = black

[semantic_release]
changelog_capitalize = false
version_variable = {{ cookiecutter.project_slug }}/__init__.py:__version__
build_command = python setup.py sdist
branch = main

[coverage:run]
omit = venv/*, tests/*
command_line = -m pytest

[tool:pytest]
# addopts = --cov
