[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | _build
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pydocstyle]
convention = "google"
match_dir = "src"

[tool.mypy]
files = "src"

[tool.semantic_release]
changelog_file = "docs/CHANGELOG.md"
changelog_capitalize = false
version_variable = "src/{{ cookiecutter.project_slug }}/__init__.py:__version__"
build_command = "python setup.py sdist"
branch = "main"

[tool.coverage.run]
omit = ["venv/*", "tests/*"]
command_line = "-m pytest"

[tool.pytest.ini_options]
# addopts = "--cov"

[tool.cruft]
skip = [
  "src/{{cookiecutter.project_slug}}/__init__.py",
  "src/{{cookiecutter.project_slug}}/_{{cookiecutter.project_slug}}.py",
  "tests"
]
