# https://packaging.python.org/en/latest/tutorials/packaging-projects
# https://hatch.pypa.io
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_distribution_name }}"
authors = [
  { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.project_short_description }}"
readme = "docs/README.md"
requires-python = ">=3.7"
license-files = { paths = ["LICENSE"] }
# Get more from http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
tests = [
  "coverage==7.2.3",
  "pytest==7.3.1",
  "pytest-cov==4.0.0",
]
docs = [
  "furo==2023.3.27",
  "myst-parser==1.0.0",
  "Sphinx==6.2.0",
  "sphinxcontrib-spelling==8.0.0",
]
dev = [
  "{{ cookiecutter.project_distribution_name }}[tests,docs]",
  "black==23.3.0",
  "build==0.10.0",
  "mypy==1.2.0",
  "mypy-extensions==1.0.0",
  "nox==2023.4.22",
  "pre-commit==3.2.2",
  "python-semantic-release==7.33.3",
  "ruff==0.0.263",
  "semver==2.13.0",
  "toml==0.10.2",
]

[project.urls]
"Homepage" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
"Changelog" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/main/docs/CHANGELOG.md"
"Documentation" = "https://{{ cookiecutter.project_slug }}.readthedocs.io"
"Repository" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[tool.hatch.version]
path = "src/{{ cookiecutter.project_slug }}/__init__.py"

[tool.ruff]
# https://beta.ruff.rs/docs/rules
line-length = 88  # Default
select = ["ALL"]
ignore = ["D203", "D213"]
force-exclude = true
src = ["src"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 88  # Default
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | _build
)/
'''

[tool.mypy]
files = ["src", "docs", "tests"]

[tool.semantic_release]
changelog_file = "docs/CHANGELOG.md"
changelog_capitalize = false
version_variable = "src/{{ cookiecutter.project_slug }}/__init__.py:__version__"
build_command = "python -m build"
branch = "main"

[tool.coverage.run]
source = ["src"]
command_line = "-m pytest"

[tool.pytest.ini_options]
# addopts = "--cov"

[tool.cruft]
skip = [
  "src/{{cookiecutter.project_slug}}/__init__.py",
  "src/{{cookiecutter.project_slug}}/_{{cookiecutter.project_slug}}.py",
  "tests"
]
