[metadata]
name = {{ cookiecutter.project_distribution_name }}
version = attr: {{ cookiecutter.project_slug }}.__version__
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
license = MIT
license_file = LICENSE
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
project_urls =
    Changelog = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/main/docs/CHANGELOG.md
    Documentation = https://{{ cookiecutter.project_slug }}.readthedocs.io
    Repository = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues
# Get more from http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = no

[options.packages.find]
where = src

[options.package_data]
{{ cookiecutter.project_slug }} = py.typed

# https://github.com/PyCQA/flake8/issues/234
# https://github.com/MicaelJarniac/cookiecutter-python-project/issues/73
[flake8]
max-line-length = 88
max-complexity = 18
ignore = E203, E266, E501, W503, F403, F401
