# https://mypy.readthedocs.io/en/stable/installed_packages.html#creating-pep-561-compatible-packages
[options]
package_dir =
    = src
packages = find:
zip_safe = no

[options.packages.find]
where = src

[options.package_data]
{{ cookiecutter.project_slug }} = py.typed

# https://github.com/PyCQA/flake8/issues/234
# https://github.com/MicaelJarniac/cookiecutter-python-project/issues/73
[flake8]
max-line-length = 88
max-complexity = 18
ignore = E203, E266, E501, W503, F403, F401
